# matrix-asgi

./: .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  consumer.py  consumers.py  matrixasgi.py  pyproject.toml  spec.md  test.yml
.github/workflows/: lint.yml  release.yml  test.yml
matrix_asgi/: __init__.py  __main__.py  conf.py  consumers.py  server.py  utils.py
matrixasgi/: __main__.py  app.py  conf.py  server.py
tests/: Dockerfile  manage.py  matrix_asgi  start.py
tests/django_app/: __init__.py  admin.py  apps.py  consumers.py  models.py  tests.py  views.py
tests/django_app/migrations/: 0001_initial.py  __init__.py
tests/django_project/: __init__.py  asgi.py  settings.py  urls.py
