[tool.poetry]
name = "matrix-asgi"
version = "2.0.0"
description = "ASGI Server for the Matrix protocol"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/nim65s/matrix-asgi"
repository = "https://github.com/nim65s/matrix-asgi.git"

[tool.poetry.dependencies]
python = "^3.10"
channels = {extras = ["daphne"], version = "^4.1.0"}
matrix-nio = "^0.20.2"
Markdown = "^3.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
channels-redis = "^4.2.0"
coverage = "^7.6.2"
pydocstyle = {extras = ["toml"], version = "^6.3.0"}
httpx = "^0.23.0"
safety = "^3.2.8"
flake8 = "^7.1.1"
black = "^24.10.0"
pyupgrade = "^3.18.0"
Django = ">=5.1.2"
twine = "^5.1.1"
wheel = "^0.38.0"

[tool.poetry.scripts]
matrix-asgi = "matrix_asgi.__main__:main"

[tool.pydocstyle]
match_dir = "(?=[^.])(?!migrations).*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
